Fixed issues and alignment

--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -1,20 +1,42 @@
-.AboutUs{
-    background: linear-gradient(rgb(67, 145, 228), rgba(172, 226, 223, 0)), url('/../../assets/images/aboutusbanner.jpg') center/cover fixed no-repeat;
-}
 
-.member1{
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/../../assets/images/member1.jpg')  center/cover no-repeat;
-}
-
-.member2{
-    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/../../assets/images/member2.png') center/cover  no-repeat;
-}
 
 .partner{
     background: linear-gradient(rgb(255, 255, 255), rgba(224, 245, 244, 0)), url('/../../assets/images/partner.jpg') center/cover fixed no-repeat;
 }
-
 .btn-radius:hover{
     transform: scale(1.09);
     transition: 0.5s all linear;
+}
+.container2{
+    max-width: none;
+    font-size: 20px;
+}
+.about{
+    position: relative;
+}
+.member1{
+text-align: start;
+padding: 60px;
+margin: 0 20px;
+}
+.member2{
+text-align: start;
+padding: 60px;
+margin: 0 20px;
+}
+.overlay{
+    position: absolute;
+    top: 17%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+}
+.overlay2{
+    position: absolute;
+    top: 61%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
 }
